--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "localbase": "^0.7.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
