--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "localbase": "^0.7.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-indexed-db": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.7.0",
