--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-indexed-db": "^2.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.7.0",
